# bert_test_multithread

./: CMakeLists.txt  README.md  build.sh  profile.cpp
src/: batchgemm.cc  dense.cc  embedding.cc  layernorm.cc  model.pb.cc  model.pb.h  tokenizer.cc
utils/: cpubm_x86.cc
